8141551: C2 can not handle returns with inccompatible interface arrays

Reviewed-by: kvn